--- a/choselogin.html
+++ b/choselogin.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="my_but">
 			<a href="javascript:;" class="weui-btn weui-btn_primary">微信登录</a>
-			<div class="weui-cells__title" style="text-align:center"><a href="login.html">其他登录方式</a></div>
+			<div class="weui-cells__title cells__title_my"><a href="login.html">其他登录方式</a></div>
 		</div>
 	</div>    
 </body>
