--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             
             <div class="weui-panel__bd">
-                <a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg">
+                <a href="news.html" class="weui-media-box weui-media-box_appmsg">
                     <div class="weui-media-box__hd">
                         <img class="my_img" src="img/test.jpg"/>
                     </div>
