--- a/pkstart.html
+++ b/pkstart.html
@@ -44,7 +44,7 @@
                         </div>                            
                     </div>
                     <div class="support">
-                        35%人支持
+                        35人支持
                     </div>
                 </div>
                 <div class="col-xs-4">
@@ -57,7 +57,7 @@
                         </div>                            
                     </div>
                     <div class="support">
-                        35%人支持
+                        35人支持
                     </div>                        
                 </div>
                 <div class="col-xs-4">
@@ -70,7 +70,7 @@
                         </div>                            
                     </div>
                     <div class="support">
-                        35%人支持
+                        35人支持
                     </div>                        
                 </div>
             </div>
