--- a/registered.html
+++ b/registered.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">    
     <title>世界杯</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="third/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/registered.css" />
 </head>
 <body>
-    <div class="my_registered" style="padding-left: 8px">
+    <div class="my_registered">
         <span onclick="goBackClick()">
-            <img style="width: 25px;" src="img/my_left.png">
+            <img src="img/my_left.png">
         </span>
         <span><a href="login.html">登录</a></span>
     </div>
@@ -23,25 +22,25 @@
             <div class="col-xs-12 my-text-center">
                 <h3>注册帐号</h3>
             </div>
-            <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+            <div class="col-xs-2 col-xs-2_my"><span class="glyphicon glyphicon-phone"></span></div>
             <div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
         </div> 
 
-        <div class="row" style="margin-top:12px">
-            <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+        <div class="row my_row_mr_se">
+            <div class="col-xs-2 col-xs-2_my"><span class="glyphicon glyphicon-lock"></span></div>
             <div class="col-xs-10"><input type="password" placeholder="设置密码"/></div>
         </div>        
 
-        <div class="row" style="margin-top:12px">
-            <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+        <div class="row my_row_mr_se">
+            <div class="col-xs-2 col-xs-2_my" ><span class="glyphicon glyphicon-lock"></span></div>
             <div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-            <div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
+            <div class="col-xs-5 my-text-center" >
                 <span id="yzcode">获取验证码</span>
             </div>
         </div>
-        <div class="row" style="border: none;margin-top: 30px">
+        <div class="row my_but_row">
             <div class="col-xs-12 my-text-center">
-                <button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">注册</button>
+                <button class="btn btn-default my_but_sub" type="submit" style="">注册</button>
             </div>
         </div>   
     </div>
@@ -53,10 +52,4 @@
 </html>
 <!-- third-第三方库(必须) begin -->
 <script src="third/jquery/jquery.min.js"></script>
-<script src="third/jquery/bootstrap.min.js"></script>
-<script src="third/jquery/bootstrap.min.js"></script>
-<!-- base lib-基础库 end-->
-<script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
-<script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
-<!-- component 头部，底部引用 -->
 <script type="text/javascript"  src="js/registered.js"></script>
