--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
         <div class="fr">
             <div id="quiz_top_right">
                 <img style="width: 20px" src="img/momey.png">
-                <span>0</span>
+                <span>010000000000</span>
                 <img style="width:28px" src="img/add.png">
             </div>            
         </div>
